[package]
name = "pg_lab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
pg15 = ["pgrx/pg15"]
pg_test = []

[dependencies]
pgrx = "0.19.1"
serde_json = "1.0.150"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pgrx-tests = "0.19.1"

[package.metadata.pgrx]
sql = ["sql/complex_operators.sql"]
